--- a/src/difflicious/static/css/tailwind.css
+++ b/src/difflicious/static/css/tailwind.css
@@ -635,6 +635,10 @@ video {
   margin-left: 0.25rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
